--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,7 +40,7 @@ version: '3'
 x-airflow-common:
   &airflow-common
   build:
-    context: ./containers/airflow/
+    context: ./container/airflow/
   environment:
     &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: LocalExecutor
